--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -1,6 +1,3 @@
-// Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
-
 // Variables
 @import "variables";
 
@@ -8,4 +5,4 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // Public theme
-@import "themes/public";
+@import "themes/private";
