--- a/resources/assets/sass/themes/public.scss
+++ b/resources/assets/sass/themes/public.scss
@@ -50,7 +50,7 @@ a:hover {
 .portfolio-item-create {
   display: flex;
   background: none;
-  border: 3px dashed #3097D1;
+  border: 2px dashed #3097D1;
 
   a {
     display: block;
@@ -62,4 +62,52 @@ a:hover {
     width: 100%;
     text-decoration: none;
   }
+}
+
+.form-title {
+  h3, h4 {
+    margin-top: 0;
+  }
+}
+
+.field-group {
+  margin-bottom: 30px;
+}
+
+.form-control {
+  box-shadow: none;
+  border-radius: 0;
+}
+
+.btn {
+  border-radius: 0;
+}
+
+.avatar-preview {
+  display: block;
+  width: 100px;
+  margin-bottom: 20px;
+}
+
+footer {
+  margin-top: 50px;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 0 !important;
+}
+
+.m-b-md {
+  margin-bottom: 30px;
+}
+
+.m-b-sm {
+  margin-bottom: 20px;
+}
+
+.m-t-md {
+  margin-top: 30px;
+}
+
+.m-t-sm {
+  margin-top: 20px;
 }
