--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,5 +7,8 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+// Bootstrap Tags
+@import "node_modules/bootstrap-tagsinput/dist/bootstrap-tagsinput";
+
 // Public theme
 @import "themes/public";
