--- a/resources/assets/sass/themes/public.scss
+++ b/resources/assets/sass/themes/public.scss
@@ -65,8 +65,17 @@ a:hover {
 }
 
 .form-title {
+  margin-bottom: 20px;
+
   h3, h4 {
     margin-top: 0;
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-size: 20px;
+  }
+
+  p {
+    color: #999999;
   }
 }
 
@@ -79,8 +88,65 @@ a:hover {
   border-radius: 0;
 }
 
+// Input file
+.inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.inputfile + label {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+
+}
+
+.inputfile:focus + label {
+  outline: 1px dotted #000;
+  outline: -webkit-focus-ring-color auto 5px;
+}
+
+// end of input file
+
 .btn {
   border-radius: 0;
+}
+
+.screenshot-filename {
+  margin-bottom: 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.screenshot-item {
+  margin-bottom: 20px;
+
+  .control-label {
+    display: block;
+  }
+
+  .screenshot-preview {
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+    height: 200px;
+    display: block;
+    box-sizing: border-box;
+    border: 2px dashed #999999;
+    vertical-align: middle;
+    line-height: 200px;
+    text-align: center;
+    cursor: pointer;
+    margin: 10px 0 20px;
+  }
 }
 
 .avatar-preview {
@@ -110,4 +176,97 @@ footer {
 
 .m-t-sm {
   margin-top: 20px;
+}
+
+.bootstrap-tagsinput,
+.tt-hint {
+  display: block;
+  width: 100%;
+  height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+  padding: $padding-base-vertical $padding-base-horizontal;
+  font-size: $font-size-base;
+  line-height: 1.4;
+  color: $input-color;
+  background-color: $input-bg;
+  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+  border: 1px solid $input-border;
+  box-shadow: none;
+  border-radius: 0;
+
+  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
+
+  @include form-control-focus;
+
+  @include placeholder;
+
+  &::-ms-expand {
+    border: 0;
+    background-color: transparent;
+  }
+
+  &[disabled],
+  &[readonly],
+  fieldset[disabled] & {
+    background-color: $input-bg-disabled;
+    opacity: 1;
+  }
+
+  &[disabled],
+  fieldset[disabled] & {
+    cursor: $cursor-disabled;
+  }
+}
+
+.tt-query {
+  width: 396px;
+  height: 30px;
+  padding: 5px 10px;
+  font-size: 16px;
+  line-height: 20px;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+}
+
+.tt-hint {
+  height: auto;
+}
+
+.tt-query {
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.tt-hint {
+  color: #999
+}
+
+.tt-menu {
+  width: 422px;
+  margin: 12px 0;
+  padding: 8px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+.tt-suggestion {
+  padding: 3px 20px;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.tt-suggestion:hover {
+  cursor: pointer;
+  color: #fff;
+  background-color: #0097cf;
+}
+
+.tt-suggestion.tt-cursor {
+  color: #fff;
+  background-color: #0097cf;
+}
+
+.tt-suggestion p {
+  margin: 0;
 }
