update portfolio and delete screenshot when delete portfolio

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7888,6 +7888,10 @@ a:hover {
   display: block;
 }
 
+.screenshot-item.screenshot-uploaded .screenshot-preview {
+  border: none;
+}
+
 .screenshot-item .screenshot-preview {
   background-position: center;
   background-size: cover;
