--- a/resources/assets/sass/themes/public.scss
+++ b/resources/assets/sass/themes/public.scss
@@ -9,7 +9,8 @@ a:hover {
 }
 
 .profile-sidebar {
-  margin-bottom: 30px;
+  margin-top: 0;
+  margin-bottom: 20px;
   padding: 20px;
   background-color: #fff;
   border: 1px solid #d3e0e9;
@@ -112,10 +113,10 @@ a:hover {
 
   hr {
     margin-top: 10px;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
   }
 
-  .control{
+  .control {
     padding: 15px;
   }
 }
@@ -134,6 +135,91 @@ a:hover {
     line-height: 342px;
     width: 100%;
     text-decoration: none;
+  }
+}
+
+.showcase {
+  background-color: #fff;
+  border: 1px solid #d3e0e9;
+  padding: 20px;
+  margin-top: 0;
+
+  .showcase-label {
+    margin: 0;
+    font-size: 12px;
+    letter-spacing: 2px;
+  }
+
+  .title-wrapper {
+    padding-right: 70px;
+  }
+
+  .title {
+    font-size: 22px;
+    margin-bottom: 8px;
+    margin-top: 20px;
+  }
+
+  .company {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+
+  .view-wrapper {
+    text-align: center;
+    width: 70px;
+    float: right;
+    margin-top: 20px;
+
+    h3 {
+      margin: 0;
+    }
+  }
+}
+
+.showcase-screenshots {
+  margin-top: 20px;
+
+  img {
+    width: 100%;
+    margin: 0 auto 20px;
+  }
+}
+
+.showcase-tags {
+  .label {
+    font-size: 16px;
+    vertical-align: middle;
+    border-radius: 0;
+    margin-right: 7px;
+    background-color: #fff;
+    border: 1px solid #d3e0e9;
+    color: inherit;
+    font-weight: normal;
+    margin-bottom: 10px;
+    display: inline-block;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &:hover {
+      background: $brand-primary;
+      border-color: transparent;
+    }
+  }
+}
+
+.showcase-share {
+  strong {
+    display: block;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  ul {
+    margin: auto;
+    text-align: center;
+    margin-bottom: 20px;
   }
 }
 
@@ -386,6 +472,9 @@ footer {
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .profile-sidebar {
+    margin-top: 10px;
+    margin-bottom: 30px;
+
     .profile {
       margin-bottom: 20px;
 
@@ -393,6 +482,15 @@ footer {
         height: 210px;
         width: auto;
       }
+    }
+  }
+  .showcase {
+    margin-top: 10px;
+  }
+
+  .showcase-screenshots {
+    img {
+      margin: 0 auto 30px;
     }
   }
 }
