--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7758,6 +7758,11 @@ a:hover {
   text-decoration: none;
 }
 
+.navbar-default .navbar-nav > li.active > a {
+  background: transparent;
+  border-bottom: 2px solid;
+}
+
 .page-title {
   font-size: 20px;
   margin-bottom: 40px;
