add showcase today (dashboard) and extract theme scss

--- a/resources/assets/sass/themes/public.scss
+++ b/resources/assets/sass/themes/public.scss
@@ -1,501 +1,12 @@
-
-a:hover {
-  text-decoration: none;
-}
-.navbar-default .navbar-nav > li.active > a{
-  background: transparent;
-  border-bottom: 2px solid;
-}
-
-.page-title {
-  font-size: 20px;
-  margin-bottom: 40px;
-}
-
-.profile-sidebar {
-  margin-top: 0;
-  margin-bottom: 20px;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #d3e0e9;
-
-  .profile {
-    text-align: left;
-
-    .avatar {
-      border-radius: 3px;
-      background-position: center;
-      background-size: cover;
-      height: 60px;
-      width: 60px;
-      float: left;
-    }
-
-    .profile-wrapper {
-      padding-left: 80px;
-    }
-
-    .name {
-      margin: 0;
-      font-size: 16px;
-    }
-
-    .username {
-      color: #999999;
-      margin-bottom: 0;
-    }
-
-    .location {
-      margin-bottom: 0;
-    }
-  }
-
-  .info {
-    margin-top: 20px;
-    margin-bottom: 0;
-
-    .list-group-item {
-      padding: 8px 15px;
-
-      strong {
-        text-transform: uppercase;
-        font-size: 12px;
-        letter-spacing: 1px;
-      }
-
-      p {
-        margin-bottom: 0;
-        line-height: 1.2;
-        margin-bottom: 5px;
-      }
-    }
-  }
-}
-
-.portfolio-item, .portfolio-item-create {
-  height: 342px;
-  margin-bottom: 30px;
-  padding: 0;
-  background: #ffffff;
-
-  .featured {
-    height: 200px;
-  }
-
-  .caption {
-    padding: 15px;
-  }
-
-  .title-wrapper {
-    height: 70px;
-
-    .title {
-      margin-top: 0;
-      margin-bottom: 5px;
-      font-size: 18px;
-      display: -webkit-box;
-      -webkit-line-clamp: 3;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .company {
-      display: block;
-      margin-bottom: 10px;
-      color: $text-color;
-
-      &:hover {
-        color: #3097D1;
-      }
-    }
-  }
-
-  time {
-    color: #999999;
-  }
-
-  hr {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-
-  .control {
-    padding: 15px;
-  }
-}
-
-.portfolio-item-create {
-  display: flex;
-  background: none;
-  border: 2px dashed #3097D1;
-
-  a {
-    display: block;
-    font-size: 20px;
-    text-align: center;
-    vertical-align: middle;
-    align-items: stretch;
-    line-height: 342px;
-    width: 100%;
-    text-decoration: none;
-  }
-}
-
-.showcase {
-  background-color: #fff;
-  border: 1px solid #d3e0e9;
-  padding: 20px;
-  margin-top: 0;
-
-  .showcase-label {
-    margin: 0;
-    font-size: 12px;
-    letter-spacing: 2px;
-  }
-
-  .title-wrapper {
-    padding-right: 70px;
-  }
-
-  .title {
-    font-size: 22px;
-    margin-bottom: 8px;
-    margin-top: 20px;
-  }
-
-  .company {
-    font-size: 18px;
-    margin-bottom: 5px;
-  }
-
-  .view-wrapper {
-    text-align: center;
-    width: 70px;
-    float: right;
-    margin-top: 20px;
-
-    h3 {
-      margin: 0;
-    }
-  }
-}
-
-.showcase-screenshots {
-  margin-top: 20px;
-
-  img {
-    width: 100%;
-    margin: 0 auto 20px;
-  }
-}
-
-.showcase-tags {
-  .label {
-    font-size: 16px;
-    vertical-align: middle;
-    border-radius: 0;
-    margin-right: 7px;
-    background-color: #fff;
-    border: 1px solid #d3e0e9;
-    color: inherit;
-    font-weight: normal;
-    margin-bottom: 10px;
-    display: inline-block;
-
-    &:last-child {
-      margin-right: 0;
-    }
-
-    &:hover {
-      background: $brand-primary;
-      border-color: transparent;
-    }
-  }
-}
-
-.showcase-share {
-  strong {
-    display: block;
-    text-align: center;
-    margin-bottom: 10px;
-  }
-
-  ul {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-}
-
-.form-title {
-  margin-bottom: 20px;
-
-  h3, h4 {
-    margin-top: 0;
-    margin-bottom: 5px;
-    font-weight: bold;
-    font-size: 20px;
-  }
-
-  p {
-    color: #999999;
-  }
-}
-
-.field-group {
-  margin-bottom: 30px;
-}
-
-.form-control {
-  box-shadow: none;
-  border-radius: 0;
-}
-
-// Input file
-.inputfile {
-  width: 0.1px;
-  height: 0.1px;
-  opacity: 0;
-  overflow: hidden;
-  position: absolute;
-  z-index: -1;
-}
-
-.inputfile + label {
-  display: inline-block;
-  cursor: pointer;
-}
-
-.inputfile:focus + label,
-.inputfile + label:hover {
-
-}
-
-.inputfile:focus + label {
-  outline: 1px dotted #000;
-  outline: -webkit-focus-ring-color auto 5px;
-}
-
-// end of input file
-
-.btn {
-  border-radius: 0;
-}
-
-.screenshot-filename {
-  margin-bottom: 10px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.screenshot-item {
-  margin-bottom: 20px;
-
-  .control-label {
-    display: block;
-  }
-
-  &.screenshot-uploaded {
-    .screenshot-preview {
-      border: none;
-    }
-  }
-
-  .screenshot-preview {
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
-    height: 200px;
-    display: block;
-    box-sizing: border-box;
-    border: 2px dashed #999999;
-    vertical-align: middle;
-    line-height: 200px;
-    text-align: center;
-    cursor: pointer;
-    margin: 10px 0 20px;
-  }
-}
-
-.avatar-preview {
-  display: block;
-  width: 100px;
-  margin-bottom: 20px;
-}
-
-footer {
-  margin-top: 50px;
-  padding: 20px;
-  text-align: center;
-  margin-bottom: 0 !important;
-}
-
-.m-b-md {
-  margin-bottom: 30px;
-}
-
-.m-b-sm {
-  margin-bottom: 20px;
-}
-
-.m-t-md {
-  margin-top: 30px;
-}
-
-.m-t-sm {
-  margin-top: 20px;
-}
-
-.bootstrap-tagsinput,
-.tt-hint {
-  display: block;
-  width: 100%;
-  height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
-  padding: $padding-base-vertical $padding-base-horizontal;
-  font-size: $font-size-base;
-  line-height: 1.4;
-  color: $input-color;
-  background-color: $input-bg;
-  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: 1px solid $input-border;
-  box-shadow: none;
-  border-radius: 0;
-
-  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
-
-  @include form-control-focus;
-
-  @include placeholder;
-
-  &::-ms-expand {
-    border: 0;
-    background-color: transparent;
-  }
-
-  &[disabled],
-  &[readonly],
-  fieldset[disabled] & {
-    background-color: $input-bg-disabled;
-    opacity: 1;
-  }
-
-  &[disabled],
-  fieldset[disabled] & {
-    cursor: $cursor-disabled;
-  }
-}
-
-.tt-query {
-  width: 396px;
-  height: 30px;
-  padding: 5px 10px;
-  font-size: 16px;
-  line-height: 20px;
-  border: 2px solid #ccc;
-  border-radius: 8px;
-  outline: none;
-}
-
-.tt-hint {
-  height: auto;
-}
-
-.tt-query {
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-}
-
-.tt-hint {
-  color: #999
-}
-
-.tt-menu {
-  width: 422px;
-  margin: 12px 0;
-  padding: 8px 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-}
-
-.tt-suggestion {
-  padding: 3px 20px;
-  font-size: 18px;
-  line-height: 24px;
-}
-
-.tt-suggestion:hover {
-  cursor: pointer;
-  color: #fff;
-  background-color: #0097cf;
-}
-
-.tt-suggestion.tt-cursor {
-  color: #fff;
-  background-color: #0097cf;
-}
-
-.tt-suggestion p {
-  margin: 0;
-}
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-  .profile-sidebar {
-    .profile {
-      text-align: center;
-
-      .avatar {
-        height: 100px;
-        width: 100px;
-        float: none;
-        margin: 0 auto 20px;
-      }
-
-      .profile-wrapper {
-        padding-left: 0;
-      }
-
-      .name {
-        margin-bottom: 5px;
-        font-size: 20px;
-      }
-
-      .username {
-        margin-bottom: 5px;
-      }
-
-      .location {
-        margin-bottom: 10px;
-      }
-    }
-  }
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-  .profile-sidebar {
-    margin-top: 10px;
-    margin-bottom: 30px;
-
-    .profile {
-      margin-bottom: 20px;
-
-      .avatar {
-        height: 210px;
-        width: auto;
-      }
-    }
-  }
-  .showcase {
-    margin-top: 10px;
-  }
-
-  .showcase-screenshots {
-    img {
-      margin: 0 auto 30px;
-    }
-  }
-}
-
+@import "../components/layout";
+@import "../components/sidebar";
+@import "../components/form";
+@import "../components/screenshot";
+@import "../components/portfolio";
+@import "../components/showcase";
+@import "../components/misc";
+@import "../components/helper";
+@import "../components/responsive";
+
+@import "../vendor/bootstraptags";
+@import "../vendor/typeahead";
